--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,18 +11,42 @@
         android:text="Filter Band" />
 
     <Button
+        android:id="@+id/ViewLog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View Log" />
+
+    <Button
         android:id="@+id/openRadio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Open Radio" />
 
-    <TextView
-        android:id="@+id/logsView"
+    <ScrollView
+        android:id="@+id/logScrollView"
         android:layout_width="match_parent"
-        android:layout_height="352dp"
-        android:background="#EFEFEF"
-        android:padding="8dp"
-        android:text="Logs will appear here" />
+        android:layout_height="200dp"
+        android:layout_margin="8dp"
+        android:background="#FFFFFF"
+        android:padding="2dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#000000"
+            android:padding="0dp">
+
+            <TextView
+                android:id="@+id/logsView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:scrollbars="vertical"
+                android:text="\n\n\n\n\n\n\n\n"
+                android:textColor="#FFFFFF" />
+        </LinearLayout>
+    </ScrollView>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/spotsRecyclerView"
