--- a/app/src/main/res/layout/activity_spot_detail.xml
+++ b/app/src/main/res/layout/activity_spot_detail.xml
@@ -1,14 +1,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_marginBottom="0dp"
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/frequencyView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:padding="4dp"
         android:text="Frequency"
         android:textSize="18sp" />
 
@@ -16,7 +17,7 @@
         android:id="@+id/callSignView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:padding="4dp"
         android:text="Call Sign"
         android:textSize="18sp" />
 
@@ -24,7 +25,7 @@
         android:id="@+id/locationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:padding="4dp"
         android:text="Location"
         android:textSize="18sp" />
 
@@ -32,7 +33,7 @@
         android:id="@+id/timeView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:padding="4dp"
         android:text="Time"
         android:textSize="18sp" />
 </LinearLayout>
