--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,20 +1,31 @@
 <resources>
 
     <style name="Theme.CatController" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Customize your theme -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <!-- General app colors -->
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorSecondary">@color/teal_200</item>
+        <item name="android:windowBackground">@color/black</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="buttonStyle">@style/DefaultButtonStyle</item>
+        <item name="spinnerStyle">@style/DefaultSpinnerStyle</item>
+        <item name="checkboxStyle">@style/DefaultCheckBoxStyle</item> <!-- Apply CheckBox style -->
     </style>
 
-    <style name="Theme.CatController.NoActionBar" parent="Theme.MaterialComponents.DayNight">
-        <!-- Customize your theme -->
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="colorSecondary">@color/teal_200</item>
+    <style name="DefaultButtonStyle" parent="Widget.MaterialComponents.Button">
+        <item name="android:background">@color/grey</item> <!-- Grey background -->
+        <item name="android:textColor">@color/white</item> <!-- White text -->
     </style>
+
+    <style name="DefaultSpinnerStyle" parent="Widget.AppCompat.Spinner">
+        <item name="android:popupBackground">@color/black</item> <!-- Dropdown background -->
+        <item name="android:textColor">@color/white</item> <!-- Dropdown text color -->
+    </style>
+
+    <style name="DefaultCheckBoxStyle" parent="Widget.MaterialComponents.CompoundButton.CheckBox">
+        <item name="android:buttonTint">@color/white</item> <!-- White CheckBox button -->
+        <item name="android:textColor">@color/white</item> <!-- White text -->
+    </style>
+
 </resources>
