connected to radio

--- a/app/src/main/res/layout/activity_com_port_config.xml
+++ b/app/src/main/res/layout/activity_com_port_config.xml
@@ -59,6 +59,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select Radio"
+        android:textSize="16sp" />
+
+    <Spinner
+        android:id="@+id/radioTypeSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Spinner
+        android:id="@+id/deviceIdSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:hint="Select Device ID" />
+
+    <Button
+        android:id="@+id/refreshButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Refresh Device List" />
+
     <Button
         android:id="@+id/applyButton"
         android:layout_width="match_parent"
