--- a/app/src/main/res/layout/spot_item.xml
+++ b/app/src/main/res/layout/spot_item.xml
@@ -72,6 +72,12 @@
         android:padding="8dp"
         android:textSize="16sp" />
 
+    <Button
+        android:id="@+id/openLinkButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Open QRZ" />
     <!-- Set Frequency Button -->
     <Button
         android:id="@+id/setFrequencyButton"
