--- a/app/src/main/res/layout/activity_popup.xml
+++ b/app/src/main/res/layout/activity_popup.xml
@@ -43,6 +43,12 @@
         android:text="15m (21.0MHz)" />
 
     <CheckBox
+        android:id="@+id/checkbox_12m"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="12m (24.0MHz)" />
+
+    <CheckBox
         android:id="@+id/checkbox_10m"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
