--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,8 @@
         <item name="android:textColor">@color/white</item>
         <item name="buttonStyle">@style/DefaultButtonStyle</item>
         <item name="spinnerStyle">@style/DefaultSpinnerStyle</item>
-        <item name="checkboxStyle">@style/DefaultCheckBoxStyle</item> <!-- Apply CheckBox style -->
+        <item name="checkboxStyle">@style/DefaultCheckBoxStyle</item>
+        <item name="editTextStyle">@style/DefaultEditTextStyle</item>
     </style>
 
     <style name="DefaultButtonStyle" parent="Widget.MaterialComponents.Button">
@@ -27,5 +28,11 @@
         <item name="android:buttonTint">@color/white</item> <!-- White CheckBox button -->
         <item name="android:textColor">@color/white</item> <!-- White text -->
     </style>
+
+    <style name="DefaultEditTextStyle" parent="Widget.AppCompat.EditText">
+        <item name="android:popupBackground">@color/black</item> <!-- Dropdown background -->
+        <item name="android:textColor">@color/white</item> <!-- Dropdown text color -->
+    </style>
+
 
 </resources>
