--- a/app/src/main/res/layout/activity_com_port_config.xml
+++ b/app/src/main/res/layout/activity_com_port_config.xml
@@ -70,6 +70,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="USB Device"
+        android:textSize="16sp" />
+
     <Spinner
         android:id="@+id/deviceIdSpinner"
         android:layout_width="match_parent"
@@ -82,11 +88,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Refresh Device List" />
+        android:backgroundTint="@color/teal_200"
+        android:text="Refresh Device List"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/applyButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/teal_200"
+        android:textColor="@color/white"
         android:text="Apply" />
 </LinearLayout>
