--- a/app/src/main/res/layout/activity_edit_log.xml
+++ b/app/src/main/res/layout/activity_edit_log.xml
@@ -46,5 +46,7 @@
         android:id="@+id/saveButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/teal_200"
+        android:textColor="@color/white"
         android:text="Save Changes" />
 </LinearLayout>
