--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,13 +13,14 @@
         android:padding="16dp">
 
         <Button
-            android:id="@+id/openPopupButton"
+            android:id="@+id/openFilterButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_columnWeight="1"
             android:layout_margin="8dp"
-            android:backgroundTint="@color/teal_200"
+
             android:text="Filter Band"
+            android:backgroundTint="@color/teal_200"
             android:textColor="@color/white" />
 
         <Button
@@ -32,25 +33,6 @@
             android:text="View Log"
             android:textColor="@color/white" />
 
-        <Button
-            android:id="@+id/openRadio"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
-            android:layout_margin="8dp"
-            android:backgroundTint="@color/teal_200"
-            android:text="Open Radio"
-            android:textColor="@color/white" />
-
-        <Button
-            android:id="@+id/donate"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_columnWeight="1"
-            android:layout_margin="8dp"
-            android:backgroundTint="@color/teal_200"
-            android:text="Donate"
-            android:textColor="@color/white" />
 
     </GridLayout>
 
