--- a/app/src/main/res/layout/activity_spot.xml
+++ b/app/src/main/res/layout/activity_spot.xml
@@ -73,17 +73,30 @@
         android:textSize="16sp" />
 
     <Button
+        android:id="@+id/SendSpot"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:backgroundTint="@color/teal_200"
+        android:text="Send Spot"
+        android:textColor="@color/white" />
+
+    <Button
         android:id="@+id/openLinkButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+
+        android:backgroundTint="@color/teal_200"
+        android:textColor="@color/white"
         android:text="Open QRZ" />
     <!-- Set Frequency Button -->
     <Button
         android:id="@+id/setFrequencyButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+
+        android:backgroundTint="@color/teal_200"
+        android:textColor="@color/white"
         android:text="Set Frequency" />
 
     <!-- Save to Log Book Button -->
@@ -91,7 +104,9 @@
         android:id="@+id/saveLogButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+
+        android:backgroundTint="@color/teal_200"
+        android:textColor="@color/white"
         android:text="Save to Log Book" />
 
 </LinearLayout>
