--- a/app/src/main/res/layout/item_log.xml
+++ b/app/src/main/res/layout/item_log.xml
@@ -19,42 +19,43 @@
             android:id="@+id/frequencyLogView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="end"
+
+            android:gravity="start"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/callSignLogView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="end"
+            android:gravity="start"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/locationLogView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="end"
+            android:gravity="start"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/timeLogView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="end"
+            android:gravity="start"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/receiveLogSValueView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="end"
+            android:gravity="start"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/sendLogSValueView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="end"
+            android:gravity="start"
             android:textSize="16sp" />
     </LinearLayout>
 
@@ -66,16 +67,28 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/generateAdifButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/teal_200"
+            android:text="Gen.ADIF"
+            android:textColor="@color/white" />
+
+        <Button
             android:id="@+id/editButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/teal_200"
+            android:textColor="@color/white"
             android:text="Edit" />
 
         <Button
             android:id="@+id/deleteButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:backgroundTint="@color/teal_200"
+            android:textColor="@color/white"
+
             android:text="Delete" />
     </LinearLayout>
 </LinearLayout>
