--- a/app/src/main/res/layout/activity_user_settings.xml
+++ b/app/src/main/res/layout/activity_user_settings.xml
@@ -22,6 +22,7 @@
 
     <Button
         android:id="@+id/saveButton"
+        android:backgroundTint="@color/teal_200"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Save" />
