--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/open_radio"
-        android:iconTintMode="add"
+
         android:title="@string/open_radio" />
     <item
         android:id="@+id/donate"
@@ -13,5 +13,8 @@
     <item
         android:id="@+id/UserSettings"
         android:title="@string/user_settings" />
+    <item
+        android:id="@+id/DxMode"
+        android:title="DX Mode" />
 
 </menu>
