connected to radio

--- a/app/src/main/res/layout-land/activity_filter.xml
+++ b/app/src/main/res/layout-land/activity_filter.xml
@@ -49,6 +49,13 @@
             android:text="20m (14.0MHz)" />
 
         <CheckBox
+            android:id="@+id/checkbox_18m"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:text="17m (18.0MHz)" />
+
+        <CheckBox
             android:id="@+id/checkbox_15m"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
