--- a/app/src/main/res/layout-land/activity_cq_mode.xml
+++ b/app/src/main/res/layout-land/activity_cq_mode.xml
@@ -114,12 +114,21 @@
                 android:layout_marginEnd="16dp"
                 android:text="Time" />
 
-            <EditText
-                android:id="@+id/input_time"
+
+            <DatePicker
+                android:id="@+id/cqdatePicker"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:hint="Enter Time" />
+                android:calendarViewShown="false"
+                android:spinnersShown="true" />
+
+            <TimePicker
+                android:id="@+id/cqtimePicker"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:timePickerMode="spinner" />
         </LinearLayout>
     </LinearLayout>
 
