--- a/app/src/main/res/layout/activity_cq_mode.xml
+++ b/app/src/main/res/layout/activity_cq_mode.xml
@@ -118,12 +118,21 @@
                     android:layout_marginBottom="8dp"
                     android:text="Time" />
 
-                <EditText
-                    android:id="@+id/input_time"
-                    android:layout_width="match_parent"
+
+                <DatePicker
+                    android:id="@+id/cqdatePicker"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:hint="Enter Time" />
+                    android:layout_weight="1"
+                    android:calendarViewShown="false"
+                    android:spinnersShown="true" />
+
+                <TimePicker
+                    android:id="@+id/cqtimePicker"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:timePickerMode="spinner" />
             </LinearLayout>
             <!-- RecyclerView -->
             <androidx.recyclerview.widget.RecyclerView
