--- a/app/src/main/res/layout-land/activity_spot.xml
+++ b/app/src/main/res/layout-land/activity_spot.xml
@@ -12,20 +12,28 @@
         android:orientation="vertical"
         android:padding="8dp">
 
-        <TextView
+        <EditText
             android:id="@+id/frequencyItemView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:text="Frequency"
+            android:inputType="number"
+            android:text="@string/frequency"
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/Country"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:textSize="18sp" />
+
+        <EditText
             android:id="@+id/callSignItemView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:text="Call Sign"
+            android:text="@string/call_sign"
             android:textSize="18sp" />
 
         <TextView
@@ -33,51 +41,78 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:text="Location"
+            android:text="@string/location"
             android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/timeItemView"
+
+        <DatePicker
+            android:id="@+id/SpotdatePicker"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:calendarViewShown="false"
+            android:spinnersShown="true" />
+
+        <TimePicker
+            android:id="@+id/SpottimePicker"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:timePickerMode="spinner" />
+
+        <!-- Combined S-Value Section -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="Time"
-            android:textSize="18sp" />
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp">
 
-        <!-- Receive S-Value Dropdown -->
-        <TextView
-            android:layout_width="match_parent"
+            <!-- Receive S-Value -->
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/receive_s_value"
+                android:textSize="16sp"
+                android:paddingEnd="8dp" />
+
+            <Spinner
+                android:id="@+id/receiveSValueSpinner"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <!-- Send S-Value -->
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/send_s_value"
+                android:textSize="16sp"
+                android:paddingStart="8dp" />
+
+            <Spinner
+                android:id="@+id/sendSValueSpinner"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+
+        <DatePicker
+            android:id="@+id/datePicker"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingTop="8dp"
-            android:text="Receive S-Value"
-            android:textSize="16sp" />
+            android:layout_weight="1"
+            android:calendarViewShown="false"
+            android:spinnersShown="true" />
 
-        <Spinner
-            android:id="@+id/receiveSValueSpinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <!-- Send S-Value Dropdown -->
-        <TextView
-            android:layout_width="match_parent"
+        <TimePicker
+            android:id="@+id/timePicker"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingTop="8dp"
-            android:text="Send S-Value"
-            android:textSize="16sp" />
-
-        <Spinner
-            android:id="@+id/sendSValueSpinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <!-- Editable Time and Date Field -->
-        <EditText
-            android:id="@+id/timeDateEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter Time and Date"
-            android:padding="8dp"
-            android:textSize="16sp" />
+            android:layout_weight="1"
+            android:timePickerMode="spinner" />
     </LinearLayout>
 
     <!-- Right Section: Buttons -->
@@ -94,7 +129,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:backgroundTint="@color/teal_200"
-            android:text="Send Spot"
+            android:text="@string/send_spot"
             android:textColor="@color/white" />
 
         <Button
@@ -103,7 +138,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:backgroundTint="@color/teal_200"
-            android:text="Open QRZ"
+            android:text="@string/open_qrz"
             android:textColor="@color/white" />
 
         <Button
@@ -112,7 +147,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:backgroundTint="@color/teal_200"
-            android:text="Set Frequency"
+            android:text="@string/set_frequency"
             android:textColor="@color/white" />
 
         <Button
@@ -120,7 +155,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/teal_200"
-            android:text="Save to Log Book"
+            android:text="@string/save_to_log_book"
             android:textColor="@color/white" />
     </LinearLayout>
 
