--- a/app/src/main/res/layout/activity_edit_log.xml
+++ b/app/src/main/res/layout/activity_edit_log.xml
@@ -22,11 +22,20 @@
         android:layout_height="wrap_content"
         android:hint="Location" />
 
-    <EditText
-        android:id="@+id/editTime"
-        android:layout_width="match_parent"
+    <DatePicker
+        android:id="@+id/datePicker"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Time" />
+        android:layout_weight="1"
+        android:calendarViewShown="false"
+        android:spinnersShown="true" />
+
+    <TimePicker
+        android:id="@+id/timePicker"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:timePickerMode="spinner" />
 
     <EditText
         android:id="@+id/editReceiveSValue"
