--- a/app/src/main/res/layout/activity_spot.xml
+++ b/app/src/main/res/layout/activity_spot.xml
@@ -5,20 +5,27 @@
     android:layout_marginBottom="0dp"
     android:padding="8dp">
 
-    <TextView
+    <EditText
         android:id="@+id/frequencyItemView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:text="Frequency"
+        android:inputType="number"
+        android:text="@string/frequency"
+        android:textSize="18sp" />
+    <TextView
+        android:id="@+id/Country"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
         android:textSize="18sp" />
 
-    <TextView
+    <EditText
         android:id="@+id/callSignItemView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:text="Call Sign"
+        android:text="@string/call_sign"
         android:textSize="18sp" />
 
     <TextView
@@ -26,16 +33,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:text="Location"
+        android:text="@string/location"
         android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/timeItemView"
-        android:layout_width="match_parent"
+
+    <DatePicker
+        android:id="@+id/SpotdatePicker"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="Time"
-        android:textSize="18sp" />
+        android:layout_weight="1"
+        android:calendarViewShown="false"
+        android:spinnersShown="true" />
+
+    <TimePicker
+        android:id="@+id/SpottimePicker"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:timePickerMode="spinner" />
 
     <!-- Receive S-value Dropdown -->
     <TextView
@@ -55,7 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
-        android:text="Send S-Value"
+        android:text="@string/send_s_value"
         android:textSize="16sp" />
 
     <Spinner
@@ -63,14 +78,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <!-- Editable Time and Date Field -->
-    <EditText
-        android:id="@+id/timeDateEditText"
-        android:layout_width="match_parent"
+
+    <DatePicker
+        android:id="@+id/datePicker"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Enter Time and Date"
-        android:padding="8dp"
-        android:textSize="16sp" />
+        android:layout_weight="1"
+        android:calendarViewShown="false"
+        android:spinnersShown="true" />
+
+    <TimePicker
+        android:id="@+id/timePicker"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:timePickerMode="spinner" />
 
     <Button
         android:id="@+id/SendSpot"
@@ -78,7 +100,7 @@
         android:layout_height="wrap_content"
 
         android:backgroundTint="@color/teal_200"
-        android:text="Send Spot"
+        android:text="@string/send_spot"
         android:textColor="@color/white" />
 
     <Button
@@ -88,25 +110,25 @@
 
         android:backgroundTint="@color/teal_200"
         android:textColor="@color/white"
-        android:text="Open QRZ" />
+        android:text="@string/open_qrz" />
     <!-- Set Frequency Button -->
     <Button
         android:id="@+id/setFrequencyButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/set_frequency"
 
         android:backgroundTint="@color/teal_200"
-        android:textColor="@color/white"
-        android:text="Set Frequency" />
+        android:textColor="@color/white" />
 
     <!-- Save to Log Book Button -->
     <Button
         android:id="@+id/saveLogButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/save_to_log_book"
 
         android:backgroundTint="@color/teal_200"
-        android:textColor="@color/white"
-        android:text="Save to Log Book" />
+        android:textColor="@color/white" />
 
 </LinearLayout>
