--- a/app/src/main/res/layout-land/activity_edit_log.xml
+++ b/app/src/main/res/layout-land/activity_edit_log.xml
@@ -16,30 +16,51 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
+            <!-- Freq -->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="8dp"
-                android:text="Freq"
-                android:textSize="16sp" />
+                android:orientation="horizontal"
+                android:layout_marginBottom="8dp">
 
-            <EditText
-                android:id="@+id/LogeditFrequency"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:text="Freq"
+                    android:textSize="16sp" />
 
-            <TextView
+                <EditText
+                    android:id="@+id/LogeditFrequency"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Enter Frequency" />
+            </LinearLayout>
+
+            <!-- Call Sign -->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="8dp"
-                android:text="Call Sign"
-                android:textSize="16sp" />
+                android:orientation="horizontal"
+                android:layout_marginBottom="8dp">
 
-            <EditText
-                android:id="@+id/LogeditCallSign"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:text="Call Sign"
+                    android:textSize="16sp" />
 
+                <EditText
+                    android:id="@+id/LogeditCallSign"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Enter Call Sign" />
+            </LinearLayout>
+
+            <!-- Location -->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -52,7 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <!-- Horizontal Layout for Date and Time Pickers -->
+            <!-- Date and Time Pickers -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -77,6 +98,7 @@
                     android:timePickerMode="spinner" />
             </LinearLayout>
 
+            <!-- Receive S-Value -->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -89,6 +111,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+            <!-- Send S-Value -->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -103,7 +126,7 @@
         </LinearLayout>
     </ScrollView>
 
-    <!-- Fixed Save Changes Button -->
+    <!-- Save Changes Button -->
     <Button
         android:id="@+id/LogsaveButton"
         android:layout_width="match_parent"
