--- a/app/src/main/res/layout-land/activity_spot.xml
+++ b/app/src/main/res/layout-land/activity_spot.xml
@@ -15,9 +15,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="8dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="8dp"
                 android:text="Freq"
@@ -25,13 +30,18 @@
 
             <EditText
                 android:id="@+id/frequencyItemView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:inputType="number" />
-
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp">
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="8dp"
                 android:text="Callsign"
@@ -39,17 +49,22 @@
 
             <TextView
                 android:id="@+id/Country"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/callSignItemView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="8dp" />
-
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -64,7 +79,7 @@
                 android:padding="8dp"
                 android:textSize="18sp" />
 
-
+        </LinearLayout>
 
 
             <!-- Combined S-Value Section -->
