--- a/app/src/main/res/layout-land/activity_edit_log.xml
+++ b/app/src/main/res/layout-land/activity_edit_log.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -81,7 +82,7 @@
                 android:layout_marginTop="8dp">
 
                 <DatePicker
-                    android:id="@+id/logdatePicker"
+                    android:id="@+id/LogdatePicker"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -90,7 +91,7 @@
                     android:spinnersShown="true" />
 
                 <TimePicker
-                    android:id="@+id/logtimePicker"
+                    android:id="@+id/LogtimePicker"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
